[package]
name = "wallcat_telegram"
version = "0.1.0"
authors = ["Sergey Sova <mail@sergeysova.com>"]
publish = false
license = "MIT"

[dependencies]
reqwest = "0.8.6"
env_logger = "0.5.12"
dotenv = "0.13.0"
serde = "1.0.75"
serde_json = "1.0.26"
serde_derive = "1.0.75"
failure = "0.1.2"
chrono = "0.4.6"
log = "0.4.5"
