[package]
name = "wallcat_telegram"
version = "0.4.0"
authors = ["Sergey Sova <mail@sergeysova.com>"]
publish = false
license = "MIT"
edition = "2018"

[[bin]]
name = "wallcat"
path = "./src/main.rs"

[dependencies]
reqwest = "0.9.5"
env_logger = "0.6.0"
dotenv = "0.13.0"
serde = { version = "1.0.80", features = ["derive"] }
serde_json = "1.0.33"
failure = "0.1.3"
chrono = "0.4.6"
log = { version = "0.4.6", features = ["std", "serde"] }
clap = { version = "2.32.0", features = ["suggestions", "color"] }
